# crash-reporting

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lyft/crasher/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lyft/crasher/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lyft/crasher/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
native-crash-reporting/: CMakeLists.txt  build.gradle
native-crash-reporting/src/androidTest/java/com/lyft/android/crashreporting/: ExampleInstrumentedTest.kt
native-crash-reporting/src/main/: AndroidManifest.xml
native-crash-reporting/src/main/cpp/: crash_interceptor.cpp  crash_interceptor.h  crash_reporting_jni.cpp
native-crash-reporting/src/main/java/com/lyft/android/crashreporting/: NdkCrashReporting.kt
native-crash-reporting/src/test/java/com/lyft/android/crashreporting/: ExampleUnitTest.kt
native-crasher/: build.gradle
native-crasher/src/androidTest/java/com/lyft/crasher/: ExampleInstrumentedTest.kt
native-crasher/src/main/: AndroidManifest.xml
native-crasher/src/main/cpp/: CMakeLists.txt  crasher.cpp
native-crasher/src/main/java/com/lyft/crasher/: NativeCrasher.kt
